Fix header z-index to be above scratchblocks

--- a/main.css
+++ b/main.css
@@ -18,7 +18,7 @@ header {
 	-moz-box-shadow: 0 1px 1px #ccc;
 	-o-box-shadow: 0 1px 1px #ccc;
 	box-shadow: 0 1px 1px #ccc;
-	z-index: 3;
+	z-index: 200;
 }
 
 
